--- a/.github/workflows/build-wordpress-ai-review.yml
+++ b/.github/workflows/build-wordpress-ai-review.yml
@@ -350,23 +350,23 @@ jobs:
             exit 1
           fi
 
-          # Extract JSON values
-          PR_REVIEW_JSON=$(echo "${{ steps.ai.outputs.pr_review }}" | jq -r '.')
-          CODE_REVIEW_JSON=$(echo "${{ steps.code_review.outputs.code_review }}" | jq -r '.')
-          SUCCESS_MSG_JSON=$(echo "${{ steps.success.outputs.success_msg }}" | jq -r '.')
+          # Extract JSON values (attention : les strings doivent être bien formatées)
+          PR_REVIEW_JSON="${{ steps.ai.outputs.pr_review }}"
+          CODE_REVIEW_JSON="${{ steps.code_review.outputs.code_review }}"
+          SUCCESS_MSG_JSON="${{ steps.success.outputs.success_msg }}"
 
-          # Extract specific fields
-          PR_VALID="false"
-          PR_COMMENT="Pas de commentaire"
-          PR_TITLE="Pas de titre suggéré"
-          PR_DESC="Pas de description suggérée"
+          # Parse fields from outputs if available
+          PR_VALID=$(echo "$PR_REVIEW_JSON" | jq -r '.valid // "false"')
+          PR_COMMENT=$(echo "$PR_REVIEW_JSON" | jq -r '.comment // "Pas de commentaire"')
+          PR_TITLE=$(echo "$PR_REVIEW_JSON" | jq -r '.suggested_title // "Pas de titre suggéré"')
+          PR_DESC=$(echo "$PR_REVIEW_JSON" | jq -r '.suggested_description // "Pas de description suggérée"')
 
-          CODE_VALID="false"
-          CODE_COMMENT="Pas de commentaire"
+          CODE_VALID=$(echo "$CODE_REVIEW_JSON" | jq -r '.valid // "false"')
+          CODE_COMMENT=$(echo "$CODE_REVIEW_JSON" | jq -r '.formattedComment // "Pas de commentaire"')
 
-          SUCCESS_MSG="$SUCCESS_MSG_JSON"
+          SUCCESS_MSG=$(echo "$SUCCESS_MSG_JSON" | jq -r '.')
 
-          # Format message using heredoc to handle special characters properly
+          # Format Slack message
           MESSAGE=$(cat <<EOF
           🤖 *AI Code Review :*
 
@@ -386,10 +386,10 @@ jobs:
           EOF
               )
 
-              # Escape the message for JSON
+              # Escape message
               ESCAPED_MESSAGE=$(echo "$MESSAGE" | jq -Rs .)
 
-              # Send the message in the thread
+              # Post to Slack thread
               curl -X POST https://slack.com/api/chat.postMessage \
                 -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
                 -H "Content-type: application/json" \
